--- a/pipelines.yml
+++ b/pipelines.yml
@@ -10,9 +10,9 @@
 #   pipeline.workers: 1
 #   pipeline.batch.size: 1
 #   config.string: "input { generator {} } filter { sleep { time => 1 } } output { stdout { codec => dots } }"
-# - pipeline.id: another_test
+ - pipeline.id: main
 #   queue.type: persisted
-#   path.config: "/tmp/logstash/*.config"
+   path.config: "/usr/share/logstash/pipeline"
 #
 # Available options:
 #
