--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Password for the 'elastic' user (at least 6 characters)
-ELASTIC_PASSWORD=
+ELASTIC_PASSWORD=devops
 
 # Password for the 'kibana_system' user (at least 6 characters)
-KIBANA_PASSWORD=
+KIBANA_PASSWORD=devops
 
 # Version of Elastic products
-STACK_VERSION={version}
+STACK_VERSION=8.12.1
 
 # Set the cluster name
 CLUSTER_NAME=docker-cluster
